src/js/components/iowa-widget/iowa-widget.less
@import "../../../css/values.less";

iowa-widget {
  @mug-size: 45px;
  @flourish-margin: 8px;
  @bar-height: 7px;

  .gotham();

  &[test]::before {
    display: block;
    padding: 8px;
    margin-bottom: 8px;
    text-align: center;
    .knockout();
    background: red;
    color: white;
    content: "TEST DATA"
  }

  a {
    color: var(--foreground);
  }

  .results-header {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    margin-bottom: 11px;

    @media @mobile {
       display: block;
    }

    h3 {
      margin: 0;
      font-size: 14px;
      font-weight: bold;
      text-transform: uppercase;
    }

    .reporting {
      color: var(--secondary);
      font-family: @sans;
      font-size: 12px;
    }
  }

  .board {
    border-collapse: collapse;
    display: block;
    font-size: 12px;

    .tbody, .thead {
      // display: flex;
      justify-content: space-between;
      flex-wrap: wrap;
      display: block;
      columns: 2;

      @media @mobile {
        columns: 1;
      }
    }

    .thead {
      .knockout-header();
      color: var(--secondary);

      .sde {
        margin-right: -.5em;
      }
    }

    .thead .tr.duplicate {
      @media @mobile {
        display: none;
      }
    }

    .row-wrapper {
      display: inline-block;
      width: 100%;
    }

    .tr {
      flex: 0 0 calc(50% - 8px);
      // margin-bottom: 2px;
      display: flex;
      position: relative;
    }

    .thead .tr {
      margin-bottom: 6px;
    }

    .th, .td {
      text-align: right;
      flex: 0 0 60px;

      &:last-child {
        padding-right: 8px;
      }
    }

    .tbody {
      .tr {
        border-radius: @mug-size 0 0 @mug-size;
        background: var(--shaded);

        &.winner { background: var(--accent-fade); }
      }

      .td {
        padding-top: @bar-height * 2;
        overflow-y: hidden;
      }
    }

    .td.flourishes {
      padding: 0;
      padding-right: @flourish-margin;

      .mugshot {
        width: @mug-size;
        height: @mug-size;
        display: block;
        border-radius: 100%;
        background: var(--shaded);
        border: 1px solid var(--outline);
        background-size: cover;
        background-position: center;

        &.noimg {
          border: transparent;
        }
      }

      .bar-container {
        position: absolute;
        top: 0;
        left: @mug-size + @flourish-margin;
        right: 0;
      }

      .bar {
        height: @bar-height;
        background: var(--accent);
      }
    }

    .name {
      flex: 1;
      text-align: left;

      @media @tablet {
        .first { display: none; }
      }
      @media @mobile {
        .first { display: inline; }
      }
    }

    .winner .name {
      font-weight: bold;

      &::after {
        content: "\00a0✔";
        color: var(--foreground);
      }
    }
  }

  .metadata-row {
    // display: flex;
    // justify-content: space-between;
    // align-items: flex-start;
    margin-top: 6px;

    // @media @mobile {
    //   display: block;
    // }

    .text {
      font-family: @sans;
      font-size: 12px;
      font-style: italic;
      color: var(--secondary);
      margin-top: 15px;

      @media @mobile {
        display: block;
        margin-top: 11px;
      }

      a {
        color: var(--link);

        &:hover, &:active { opacity: 0.7; }
      }
    }

    .footnote {
      display: block;
      margin-top: 5px;
    }
  }

  .show-more {
    background: transparent;
    border: none;
    font-family: inherit;
    font-weight: inherit;
    color: inherit;
    .knockout-header();
    text-transform: uppercase;
    font-size: 14px;
    letter-spacing: 0.01em;
    color: var(--link);
    padding: 0;
    white-space: nowrap;

    &:hover {
      cursor: pointer;
      opacity: 0.7;
    }

    &::after {
      content: " ▲"
    }
  }

  .full-results {
    display: none;
    color: var(--foreground);
  }

  &[href] {
    .show-more {
      display: none;
    }

    .full-results {
      display: block;
    }
  }

  &[expanded] {
    .show-more .more {
      display: none;
    }
  }

  &:not([expanded]) {
    .show-more {
      .fewer {
        display: none;
      }

      &::after {
        content: " ▼";
      }
    }

    .fold-6 {
      display: none !important;
    }

    @media @mobile {
      .fold-4 {
        display: none !important;
      }
    }
  }

}

